--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,14 @@ body {
 
 }
 
+button {
+    margin: 15px;
+    padding: 5px;
+    font-size: 40px;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+}
+
 
 #answerBlock {
   text-align: center;
@@ -45,26 +53,31 @@ body {
   visibility: visible;
 }
 
+#start {
+    visibility: visible;
+}
+
+p {
+    font-size: 30px;
+    font-weight: bold;
+    color: darkolivegreen;
+    font-family: 'Open Sans', sans-serif;
+}
 
 
 h1 {
   text-align: center;
   color: white;
-  font-weight: bolder;
+  font-family: 'Charmonman', cursive;
   padding: 20px;
-  font-size: 45px;
+  font-size: 70px;
 }
 
-p {
-  margin: 10px;
-  font-weight: bold;
-  color: red;
-  font-size: 20px;
-}
 
 h2, h4 {
   margin: 30px;
   font-weight: bold;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .wrapper {
