--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,8 +57,15 @@ button {
     visibility: visible;
 }
 
+.lead {
+    font-size: 20px;
+    font-weight: bold;
+    color: darkolivegreen;
+    font-family: 'Open Sans', sans-serif; 
+}
+
 p {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
     color: darkolivegreen;
     font-family: 'Open Sans', sans-serif;
@@ -67,7 +74,7 @@ p {
 
 h1 {
   text-align: center;
-  color: white;
+  color: black;
   font-family: 'Charmonman', cursive;
   padding: 20px;
   font-size: 70px;
